refactor: update namespaces and improve DTO structure; add new DTOs for visualizations and reports

--- a/AquAnalyzerWebApp/Components/Pages/ManageWaterData.razor
+++ b/AquAnalyzerWebApp/Components/Pages/ManageWaterData.razor
@@ -2,7 +2,7 @@
 @page "/manage-waterdata/{Id:int}"
 @using AquAnalyzerAPI.Services
 @using AquAnalyzerAPI.Interfaces
-@using AquAnalyzerWebApp.Models
+@using AquAnalyzerAPI.Dtos
 @using Microsoft.AspNetCore.Components.Forms
 
 @inject IWaterService WaterService
