--- a/AquAnalyzerWebApp/Components/Pages/WaterDataDashboard.razor
+++ b/AquAnalyzerWebApp/Components/Pages/WaterDataDashboard.razor
@@ -1,5 +1,5 @@
 @page "/water-dashboard"
-@using AquAnalyzerWebApp.Models
+@using AquAnalyzerAPI.Dtos;
 @using AquAnalyzerWebApp.Interfaces
 @inject IWaterService WaterService
 @inject NavigationManager NavigationManager
