--- a/AquAnalyzerWebApp/Components/WaterMetricsSummary.razor
+++ b/AquAnalyzerWebApp/Components/WaterMetricsSummary.razor
@@ -1,6 +1,6 @@
-@using AquAnalyzerWebApp.Models
 @using AquAnalyzerAPI.Services
 @using AquAnalyzerAPI.Interfaces
+@using AquAnalyzerAPI.Dtos
 @inject IWaterService WaterService
 
 <div class="card">
