--- a/AquAnalyzerWebApp/Components/Pages/ReportList.razor
+++ b/AquAnalyzerWebApp/Components/Pages/ReportList.razor
@@ -87,7 +87,7 @@
 
     private void ViewReport(int id)
     {
-        NavigationManager.NavigateTo($"/report/{id}");
+        NavigationManager.NavigateTo($"/report/view/{id}");
     }
 
     private void EditReport(int id)
